<resources>
    <string name="app_name">Submission Made 1</string>
    <string name="title_headlines">Headlines</string>
    <string name="title_health">Health</string>
    <string name="title_sports">Sports</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="text_name">Nauval</string>
    <string name="author">Author</string>
    <string name="search">Search...</string>
    <string name="night_mode">Night Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>
    <string name="detail_news">Menampilkan Detail Gambar Berita</string>
</resources>